# drlead

./: README.md
LLM Lead Scorer/: .exampleenv  .gitignore  config.py  pyproject.toml
LLM Lead Scorer/ML/: pyproject.toml
LLM Lead Scorer/app/: __init__.py  gen.py  routes.py  scoring.py
LLM Lead Scorer/app/templates/: form.html
LLM Lead Scorer/scripts/: seed_data.py
MLModels/: p.py  requirements.txt  test.py
MLModels/saved_models/: lead_scoring_metadata.joblib  lead_scoring_preprocessor.joblib  lead_scoring_xgb_model.joblib
PyNoteBook/: FinalXBOOST.ipynb  LEAD_SCORE.ipynb  XGBoost.py
Swiftaid-AI/python/: app.py
