[project]
name = "ml"
version = "0.1.0"
description = ""
authors = [
    {name = "Priyanshu Jha",email = "priyanshu.k4444@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (==2.2.2)",
    "numpy (==2.0.2)",
    "scikit-learn (==1.6.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
